# ConvexHull

./: 2d-tests.ipynb  2dtests.py  3d-tests.ipynb  ConvexHullviaExtents.py  ConvexHullviaMVEE.py  Ellipsoid.py  README.md  common.py  plots.py  test.ipynb
approxhull/: .gitignore  LICENSE  README.md  pyproject.toml
approxhull/benchmarks/: bench_end_to_end.py  bench_support_query.py  stress_test.py
approxhull/cpp/: CMakeLists.txt
approxhull/cpp/bindings/: pybind_module.cpp
approxhull/cpp/include/approxhull/: argmax_dot.hpp  householder.hpp
approxhull/cpp/src/: argmax_dot.cpp  householder.cpp
approxhull/examples/: compare_backends.py  quickstart.py  verify_eps_hull.py
approxhull/src/approxhull/: __init__.py  _api.py  _mvee.py  _random.py  _sampling.py  _support.py  _typing.py  _validation.py
approxhull/src/approxhull/backends/: __init__.py  cpp_impl.py  numba_impl.py  python_impl.py
approxhull/tests/: test_api.py  test_backends_consistency.py  test_compare_scipy.py  test_degenerate_inputs.py  test_mvee_vmf.py  test_reproducibility.py  test_uniform.py
arxivs/: 2dtest.ipynb  ConvexHullviaExtents.py  ConvexHullviaMVEE.py  Ellipsoid.py  common.py
v1/: 2d-tests.ipynb  3dtests.py
