[build-system]
requires = ["scikit-build-core>=0.7.0", "pybind11>=2.11.0"]
build-backend = "scikit_build_core.build"

[project]
name = "approxhull"
version = "0.1.0"
description = "Approximate convex hull vertex set via directional sampling"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "ApproxHull Contributors"}
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
numba = ["numba>=0.58"]
scipy = ["scipy>=1.9"]

[project.urls]
Homepage = "https://example.com/approxhull"

[tool.scikit-build]
wheel.packages = ["src/approxhull"]
minimum-version = "0.7"

[tool.scikit-build.cmake]
minimum-version = "3.18"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

